# twine.rs

./: .eslintrc.json  .gitignore  .prettierignore  Cargo.toml  README.md  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.electron.json  tsconfig.json  vite.config.mts
.cargo/: config.toml
benchmarks/: .gitignore  README.md  generate-fixtures.mjs
crates/: README.md
crates/twine_cli/: Cargo.toml
crates/twine_cli/src/: main.rs
crates/twine_core/: Cargo.toml
crates/twine_core/src/: lib.rs
crates/twine_export/: Cargo.toml
crates/twine_export/src/: lib.rs
crates/twine_graph/: Cargo.toml
crates/twine_graph/src/: lib.rs
crates/twine_model/: Cargo.toml
crates/twine_model/src/: lib.rs
crates/twine_native/: Cargo.toml
crates/twine_native/src/: lib.rs
crates/twine_parse/: Cargo.toml
crates/twine_parse/src/: lib.rs
crates/twine_search/: Cargo.toml
crates/twine_search/src/: lib.rs
crates/twine_store/: Cargo.toml
crates/twine_store/src/: lib.rs
crates/twine_wasm/: Cargo.toml
crates/twine_wasm/src/: lib.rs
docs/: WORKBENCH_INTEGRATION.md
docs/design-system/: IMPLEMENTATION_GUIDE.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  gallery.html  readme.md
docs/design-system/guidelines/: brand-focus.card.html  brand-icons.card.html  brand-mark.card.html  color-brand.card.html  color-semantic.card.html  color-surfaces.card.html  color-text.card.html  color-tints.card.html  spacing-elevation.card.html  spacing-radii.card.html  spacing-scale.card.html  type-display.card.html  type-mono.card.html  type-scale.card.html  type-ui.card.html
docs/design-system/tokens/: base.css  colors.css  elevation.css  typography.css
docs/design-system/ui_kits/: nav.js
docs/design-system/uploads/: TWINE_RS_UI_DOCUMENT.md
docs/en/src/: SUMMARY.md
docs/reference/: RUST_CORE_STYLE_GUIDE.md  RUST_PORT_FEASIBILITY.md  RUST_SESSION_MIGRATION.md  TWINE_RS_0_1_2_FEEDBACK_REMEDIATION.md  TWINE_RS_DESIGN_SYSTEM_SPINE.md  TWINE_RS_MILESTONES.md  TWINE_RS_PERFORMANCE_ROADMAP.md  TWINE_RS_STACK_STRATEGY.md  TWINE_RS_UI_DOCUMENT.md  UPSTREAM_TWINEJS_README.md
e2e/: smoke-test.spec.ts
public/locales/: README.md  ca.json  cs.json  en-US.json  fr.json  it.json  ja.json  nl.json  pl.json  pt-BR.json  pt-PT.json  ru.json  tr.json  uk.json  zh-CN.json
scripts/: archive-web.mjs  build-native.mjs  build-wasm.mjs  check-core-mutation-boundaries.mjs  copy-native.mjs  organize-release.mjs
src/: app.tsx  externals.d.ts
src/__mocks__/: electron.ts  react-transition-group.tsx  workerMock.js
src/components/app-shell/: app-shell.css  app-shell.tsx  command-registry.ts  keyboard-shortcuts.ts
src/components/badge/: badge.css  badge.tsx
src/components/container/: card-group.tsx  main-content.tsx
src/components/control/: autocomplete-text-input.tsx  checkbox-button.tsx  confirm-button.css  confirm-button.tsx  font-select.tsx  icon-button-link.css  prompt-button.css  prompt-button.tsx  text-input.css  text-select.css  text-select.tsx
src/components/design-system/: badge.tsx  button.tsx  checkbox.tsx  colors.ts  design-system.css  icon-button.tsx  index.ts  input.tsx  panel.tsx  passage-node.tsx  segmented-control.tsx  select.tsx  switch.tsx  tabler-icon.tsx  tag.tsx
src/components/error/: error-message.css  global-error-boundary.css  global-error-boundary.tsx  safari-warning-card.css
src/components/fuzzy-finder/: fuzzy-finder-result.css  fuzzy-finder.css  fuzzy-finder.tsx
src/components/marquee-selection/: marquee-selection.css
src/components/passage/: passage-card-group.tsx  passage-card.tsx  rename-passage-button.tsx
src/components/storage-quota/: storage-quota.css
src/components/story/: rename-story-button.tsx  story-card.css  story-preview.css  story-preview.tsx
src/components/story-format/: story-format-select.tsx
src/components/tag/: tag-button.css  tag-card-button.css  tag-card-button.tsx
src/core/: asset-paths.ts  graph-projection.ts  index.ts  patch-applier.ts  project-host.ts  project-host.tsx  project-snapshot.ts  quick-fix-registry.ts  story-index.ts  view-models.ts
src/core/__tests__/: asset-contract.test.ts  graph-projection.parity.test.ts  graph-projection.test.ts  project-host.test.ts  story-index.test.ts  wasm-worker-client.test.ts
src/core/bindings/: CoreAssetReference.ts  CoreContentsEntry.ts  CoreContentsEntryKind.ts  CoreDiagnostic.ts  CoreExternalChange.ts  CoreExternalConflict.ts  CoreExternalDelta.ts  CoreExternalIngestMode.ts  CoreExternalIngestOutcome.ts  CoreExternalIngestResult.ts  CoreHistoryKind.ts  CoreQuickFix.ts  CoreReplacePreview.ts  CoreSearchHit.ts  CoreSearchScope.ts  CoreSessionStatus.ts  CoreStoryIndex.ts  CoreStoryIndexOptions.ts  CoreSymbol.ts  CoreSymbolKind.ts  CoreTagEntry.ts  Patch.ts  (+3 more)
src/dialogs/: app-prefs.tsx  dialogs.types.ts  index.ts  passage-tags.css  passage-tags.tsx  story-javascript.tsx  story-search.css  story-search.tsx  story-source-dialog.ts  story-stylesheet.tsx  story-tags.tsx
src/route-actions/: app-actions.tsx  story-edit-actions.tsx
src/routes/: command-line-open-sync.tsx  index.tsx  story-preview-debug.ts  story-preview-frame.css  story-preview-frame.tsx
src/store/: merge-project-stories.ts  project-hydration.ts  project-session-sync.css  project-session-sync.tsx  theme-setter.tsx  use-codemirror-passage-hints.ts  use-format-codemirror-toolbar.ts  use-publishing.ts  use-story-launch.ts
src/styles/: animations.css  colors.css  contents.css  diagnostics.css  typography.css  workbench-tokens.css  workbench.css
src/test-util/: fake-state-provider.tsx  fakes.ts  index.ts  test-core-session-client.ts
src/util/: build-package.ts  color.ts  i18n.ts  import.ts  locales.ts  performance.ts  publish.ts  story-graph-metadata.ts  twee.ts
ui_kits/workbench/: CommandPalette.jsx  EditorDock.jsx  GraphMode.jsx  WORKBENCH_GUIDE.md  data.js  index.html  workbench.css
ui_kits_remediation/: BUILD_EXPORT_IMPLEMENTATION.md  LIGHT_THEME_IMPLEMENTATION.md  README.md  light-theme.tokens.css
(+264 files in other folders)
