[workspace]
members = [
    "crates/twine_cli",
    "crates/twine_core",
    "crates/twine_export",
    "crates/twine_graph",
    "crates/twine_model",
    "crates/twine_parse",
    "crates/twine_search",
    "crates/twine_store",
    "crates/twine_native",
    "crates/twine_wasm",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.88"
version = "0.1.4"

[workspace.dependencies]
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
regex = "1"
rayon = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"
ts-rs = { version = "10", features = ["serde-compat"] }
twine_core = { path = "crates/twine_core" }
twine_export = { path = "crates/twine_export" }
twine_graph = { path = "crates/twine_graph" }
twine_model = { path = "crates/twine_model" }
twine_native = { path = "crates/twine_native" }
twine_parse = { path = "crates/twine_parse" }
twine_search = { path = "crates/twine_search" }
twine_store = { path = "crates/twine_store" }
twine_wasm = { path = "crates/twine_wasm" }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
