[package]
name = "twine_core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
twine_graph.workspace = true
twine_model.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
