[package]
name = "twine_core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
twine_graph.workspace = true
twine_model.workspace = true

[lints]
workspace = true
