[package]
name = "twine_store"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
twine_graph.workspace = true
twine_model.workspace = true

[lints]
workspace = true
