[package]
name = "twine_wasm"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
twine_core.workspace = true
twine_model.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[lints]
workspace = true
